# Incredible-Machines

./: .gitignore  CMakeLists.txt  LICENSE  README.md
MachineLib/: Banner.cpp  Banner.h  Basket.cpp  Basket.h  Body.cpp  Body.h  CMakeLists.txt  Component.cpp  Component.h  Conveyor.cpp  Conveyor.h  Curtain.cpp  Curtain.h  DominoFactory.cpp  DominoFactory.h  Goal.cpp  Goal.h  Hamster.cpp  Hamster.h  Machine.cpp  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineSystem.cpp  MachineSystem.h  MachineSystemFactory.cpp  Pulley.cpp  Pulley.h  RotationSink.cpp  RotationSink.h  RotationSource.cpp  RotationSource.h
MachineTests/: MachineTest.cpp
